<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/hintergrund">



    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/synhighscoretext"
        android:id="@+id/textView2"
        android:layout_gravity="center_horizontal"
        android:textSize="35dp"
        android:textColor="#ffffff"
        android:layout_weight="0.25"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp" />

        <TableLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/textgrey"
            android:padding="10dp"
            android:id="@+id/tableLayout"
            android:layout_below="@+id/accuracyButton"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginLeft="15dp"
            android:layout_marginBottom="20dp">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="30dp"
                    android:layout_height="wrap_content"
                    android:text="@string/highscorerank"
                    android:id="@+id/textView14"
                    android:layout_weight="0.2"
                    android:textStyle="bold"
                    android:textSize="25dp"
                    android:layout_marginLeft="5dp" />

                <TextView
                    android:layout_width="70dp"
                    android:layout_height="wrap_content"
                    android:text="Nickname"
                    android:id="@+id/textView19"
                    android:layout_weight="0.3"
                    android:textSize="25dp"
                    android:textStyle="bold"
                    android:gravity="center"/>

                <TextView
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:text="@string/hspoints"
                    android:id="@+id/textView21"
                    android:layout_weight="0.2"
                    android:textSize="25dp"
                    android:textStyle="bold"
                    android:gravity="center"/>

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="30dp"
                    android:layout_height="wrap_content"
                    android:text="01"
                    android:id="@+id/txtRang"
                    android:layout_weight="0.2"
                    android:textSize="25dp"
                    android:layout_marginLeft="5dp"/>

                <TextView
                    android:layout_width="70dp"
                    android:layout_height="wrap_content"
                    android:text="nametext"
                    android:id="@+id/txtNickname"
                    android:layout_weight="0.3"
                    android:textSize="25dp"
                    android:gravity="center"/>

                <TextView
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:text="100"
                    android:id="@+id/txtGesamtscore"
                    android:textSize="25dp"
                    android:layout_weight="0.2"
                    android:gravity="center"/>

            </TableRow>

        </TableLayout>

    <Button
        android:layout_width="145dp"
        android:layout_height="wrap_content"
        android:text="@string/gamemode1"
        android:id="@+id/accuracyButton"
        android:background="@drawable/buttongrey2"
        android:checked="false"
        android:textOn="@string/gamemode2"
        android:textSize="15dp"
        android:onClick="onToggle"
        android:layout_alignTop="@+id/timeButton"
        android:layout_alignLeft="@+id/tableLayout"
        android:layout_alignStart="@+id/tableLayout"
        android:clickable="true"
        android:singleLine="true"/>

    <Button
        android:layout_width="145dp"
        android:layout_height="wrap_content"
        android:text="@string/gamemode2"
        android:id="@+id/timeButton"
        android:background="@drawable/buttongrey2"
        android:checked="false"
        android:textOn="@string/gamemode2"
        android:textSize="15dp"
        android:layout_below="@+id/textView2"
        android:layout_alignRight="@+id/tableLayout"
        android:layout_alignEnd="@+id/tableLayout"
        android:alpha="0.5"
        android:layout_marginTop="25dp" />

</RelativeLayout>