<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/hintergrund"
    android:weightSum="1"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="SynWord"
        android:id="@+id/textView"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textSize="60dp"
        android:textColor="#ffffffff"
        android:layout_gravity="center"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="25dp"
        android:layout_marginRight="25dp"
        android:layout_marginBottom="5dp" />

    <Button
        android:layout_width="220dp"
        android:layout_height="70dp"
        android:text="@string/playButton"
        android:id="@+id/btnPlay"
        android:background="@drawable/buttongreen"
        android:layout_weight="0.25"
        android:layout_gravity="center"
        android:textSize="30dp"
        android:onClick="showPlay"
        android:layout_below="@+id/textView"
        android:layout_alignLeft="@+id/btnScore"
        android:layout_alignStart="@+id/btnScore"
        android:layout_marginTop="65dp" />

    <Button
        android:layout_width="220dp"
        android:layout_height="70dp"
        android:text="@string/score"
        android:id="@+id/btnScore"
        android:background="@drawable/buttongreen"
        android:layout_weight="0.25"
        android:layout_gravity="center"
        android:textSize="30dp"
        android:onClick="showHighscore"
        android:textColor="#ffffff"
        android:layout_below="@+id/btnPlay"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp" />

    <Button
        android:layout_width="220dp"
        android:layout_height="70dp"
        android:text="@string/help"
        android:id="@+id/btnHelp"
        android:background="@drawable/buttongreen"
        android:layout_weight="0.25"
        android:layout_gravity="center"
        android:textSize="30dp"
        android:onClick="showHelp"
        android:layout_below="@+id/btnScore"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="40dp" />
    <Button
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:text="Credits"
        android:id="@+id/btnCredits"
        android:background="@drawable/buttongrey"
        android:layout_weight="0.25"
        android:layout_gravity="center"
        android:textSize="15dp"
        android:onClick="showCredits"
        android:textColor="#000000"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_margin="10dp" />

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/german"
        android:id="@+id/btnDE"
        android:onClick="clickDE"
        android:layout_alignTop="@+id/btnLang"
        android:layout_toRightOf="@+id/btnLang"
        android:layout_toEndOf="@+id/btnLang"
        android:layout_marginLeft="5dp" />

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnLang"
        android:background="@drawable/uk"
        android:onClick="clickEN"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp" />


</RelativeLayout>